update elasticbeanstalk config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,18 @@ before_install:
   - docker build -t hoffmanshf/docker-react -f Dockerfile.dev .
 
 script:
-- docker run -e CI=true hoffmanshf/docker-react npm run test
+  - docker run -e CI=true hoffmanshf/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-400594057119"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
+  
